[tool.poetry]
name = "annee-bissextile"
version = "0.1.0"
description = "Script annee bissextile"
authors = ["Fanny Tutenuit <fanny.tutenuit@covage.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
typer = "^0.15.1"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
